@@ -33,6 +33,7 @@ o [jj] Schema for mesh XML format
 * Geometry representation, including boundaries
 * Mesh generation using triangle or tetgen?
 * Clean up iterators?
+* Fix local ordering and orientation
 
 Linear Algebra
 --------------
