@@ -27,6 +27,15 @@ namespace dolfin {
     /// Constructor
     NewArray(int n) : std::vector<T>(n) {}
 
+    /// Assign to all elements in the array
+    const NewArray& operator=(const T& element)
+    {
+      for (unsigned int i = 0; i < size(); i++)
+	(*this)[i] = element;
+      
+      return *this;
+    }
+
   };
 
 }
